added grid for artiles

--- a/marmelad/_blocks/all-articles/all-articles.html
+++ b/marmelad/_blocks/all-articles/all-articles.html
@@ -1,265 +1,253 @@
 <div block="all-articles">
   <div elem="section">
     <div elem="inner" class="contain">
-      <div elem="cols">
-        <div elem="col">
-          <div elem="items">
-            <div elem="item">
-              <a block="article-thumb" href="#">
-                <span elem="body">
-                  <span elem="img">
-                    <img src="img/article-thumb-img13.jpg" alt="">
-                  </span>
-                  <span elem="content">
-                    <span elem="name">
-                      Когда российское общество станет инклюзивным?
-                    </span>
-                    <span elem="tags">
-                      <span elem="tag">#Дети</span>
-                      <span elem="tag">#Образование</span>
-                    </span>
-                    <span elem="date">
-                      <span>23 ИЮЛЯ</span>
-                      <i></i>
-                      <span>18:43</span>
-                    </span>
-                  </span>
+      <div elem="items" class="js-all-articles-grid">
+        <div elem="item" class="grid-item">
+          <a block="article-thumb" href="#">
+            <span elem="body">
+              <span elem="img">
+                <img src="img/article-thumb-img13.jpg" alt="">
+              </span>
+              <span elem="content">
+                <span elem="name">
+                  Когда российское общество станет инклюзивным?
                 </span>
-              </a><!-- article-thumb -->
-            </div>
-            <div elem="item">
-              <a block="article-thumb" href="#">
-                <span elem="body">
-                  <span elem="img">
-                    <img src="img/article-thumb-img14.jpg" alt="">
-                  </span>
-                  <span elem="content">
-                    <span elem="icon">
-                      <img src="img/article-thumb-icon.png" alt="">
-                    </span>
-                    <span elem="name">
-                      какие профессии будут востребованы в России в ближайшее десятилетие
-                    </span>
-                    <span elem="tags">
-                      <span elem="tag">#Дети</span>
-                      <span elem="tag">#Образование</span>
-                    </span>
-                    <span elem="date">
-                      <span>23 ИЮЛЯ</span>
-                      <i></i>
-                      <span>18:43</span>
-                    </span>
-                  </span>
+                <span elem="tags">
+                  <span elem="tag">#Дети</span>
+                  <span elem="tag">#Образование</span>
                 </span>
-              </a><!-- article-thumb -->
-            </div>
-            <div elem="item">
-              <a block="article-thumb" href="#">
-                <span elem="body">
-                  <span elem="img">
-                    <img src="img/article-thumb-img15.jpg" alt="">
-                  </span>
-                  <span elem="content">
-                    <span elem="name">
-                      Осознанный туризм:
-                      почему он становится всё более популярным?
-                    </span>
-                    <span elem="tags">
-                      <span elem="tag">#Дети</span>
-                      <span elem="tag">#Образование</span>
-                    </span>
-                    <span elem="date">
-                      <span>23 ИЮЛЯ</span>
-                      <i></i>
-                      <span>18:43</span>
-                    </span>
-                  </span>
+                <span elem="date">
+                  <span>23 ИЮЛЯ</span>
+                  <i></i>
+                  <span>18:43</span>
                 </span>
-              </a><!-- article-thumb -->
-            </div>
-          </div>
+              </span>
+            </span>
+          </a><!-- article-thumb -->
         </div>
-        <div elem="col">
-          <div elem="items">
-            <div elem="item">
-              <a block="article-thumb" href="#">
-                <span elem="body">
-                  <span elem="img">
-                    <img src="img/article-thumb-img16.jpg" alt="">
-                  </span>
-                  <span elem="content">
-                    <span elem="name">
-                      Дети-вундеркинды: <br>
-                      хорошо это или <br>
-                      плохо?
-                    </span>
-                    <span elem="tags">
-                      <span elem="tag">#Дети</span>
-                      <span elem="tag">#Образование</span>
-                    </span>
-                    <span elem="date">
-                      <span>23 ИЮЛЯ</span>
-                      <i></i>
-                      <span>18:43</span>
-                    </span>
-                  </span>
+        <div elem="item" class="grid-item">
+          <a block="article-thumb" href="#">
+            <span elem="body">
+              <span elem="img">
+                <img src="img/article-thumb-img14.jpg" alt="">
+              </span>
+              <span elem="content">
+                <span elem="icon">
+                  <img src="img/article-thumb-icon.png" alt="">
                 </span>
-              </a><!-- article-thumb -->
-            </div>
-            <div elem="item">
-              <a block="article-thumb" href="#">
-                <span elem="body">
-                  <span elem="img">
-                    <img src="img/article-thumb-img17.jpg" alt="">
-                  </span>
-                  <span elem="content">
-                    <span elem="name">
-                      Российские школы смогут пользоваться аналогами программ Microsoft
-                    </span>
-                    <span elem="tags">
-                      <span elem="tag">#Дети</span>
-                      <span elem="tag">#Образование</span>
-                    </span>
-                    <span elem="date">
-                      <span>23 ИЮЛЯ</span>
-                      <i></i>
-                      <span>18:43</span>
-                    </span>
-                  </span>
+                <span elem="name">
+                  какие профессии будут востребованы в России в ближайшее десятилетие
                 </span>
-              </a><!-- article-thumb -->
-            </div>
-            <div elem="item">
-              <a block="article-thumb" href="#">
-                <span elem="body">
-                  <span elem="img">
-                    <img src="img/article-thumb-img18.jpg" alt="">
-                  </span>
-                  <span elem="content">
-                    <span elem="icon">
-                      <img src="img/article-thumb-icon.png" alt="">
-                    </span>
-                    <span elem="name">
-                      Болонская система образования, и к чему приведет отказ от нее?
-                    </span>
-                    <span elem="tags">
-                      <span elem="tag">#Дети</span>
-                      <span elem="tag">#Образование</span>
-                    </span>
-                    <span elem="date">
-                      <span>23 ИЮЛЯ</span>
-                      <i></i>
-                      <span>18:43</span>
-                    </span>
-                  </span>
+                <span elem="tags">
+                  <span elem="tag">#Дети</span>
+                  <span elem="tag">#Образование</span>
                 </span>
-              </a><!-- article-thumb -->
-            </div>
-          </div>
+                <span elem="date">
+                  <span>23 ИЮЛЯ</span>
+                  <i></i>
+                  <span>18:43</span>
+                </span>
+              </span>
+            </span>
+          </a><!-- article-thumb -->
         </div>
-        <div elem="col">
-          <div elem="items">
-            <div elem="item">
-              <a block="article-thumb" href="#">
-                <span elem="body">
-                  <span elem="img">
-                    <img src="img/article-thumb-img19.jpg" alt="">
-                  </span>
-                  <span elem="content">
-                    <span elem="icon">
-                      <img src="img/article-thumb-icon.png" alt="">
-                    </span>
-                    <span elem="name">
-                      Десятилетие науки <br>
-                      и технологий: взгляд <br>
-                      из «Сириуса»
-                    </span>
-                    <span elem="tags">
-                      <span elem="tag">#Дети</span>
-                      <span elem="tag">#Образование</span>
-                    </span>
-                    <span elem="date">
-                      <span>23 ИЮЛЯ</span>
-                      <i></i>
-                      <span>18:43</span>
-                    </span>
-                  </span>
+        <div elem="item" class="grid-item">
+          <a block="article-thumb" href="#">
+            <span elem="body">
+              <span elem="img">
+                <img src="img/article-thumb-img15.jpg" alt="">
+              </span>
+              <span elem="content">
+                <span elem="name">
+                  Осознанный туризм:
+                  почему он становится всё более популярным?
                 </span>
-              </a><!-- article-thumb -->
-            </div>
-            <div elem="item">
-              <a block="article-thumb" href="#">
-                <span elem="body">
-                  <span elem="img">
-                    <img src="img/article-thumb-img20.jpg" alt="">
-                  </span>
-                  <span elem="content">
-                    <span elem="name">
-                      Ученые открыли, как гены отца и матери влияют на поведение детей
-                    </span>
-                    <span elem="tags">
-                      <span elem="tag">#Дети</span>
-                      <span elem="tag">#Образование</span>
-                    </span>
-                    <span elem="date">
-                      <span>23 ИЮЛЯ</span>
-                      <i></i>
-                      <span>18:43</span>
-                    </span>
-                  </span>
+                <span elem="tags">
+                  <span elem="tag">#Дети</span>
+                  <span elem="tag">#Образование</span>
                 </span>
-              </a><!-- article-thumb -->
-            </div>
-            <div elem="item">
-              <a block="article-thumb" mods="no-img" href="#">
-                <span elem="body">
-                  <!-- <span elem="img">
-                                <img src="img/article-thumb-img5.jpg" alt="">
-                              </span> -->
-                  <span elem="content">
-                    <span elem="name">
-                      Как заинтересовать <br>
-                      детей наукой? <br>
-                      СОВЕТЫ ПСИХОЛОГОВ
-                    </span>
-                    <span elem="tags">
-                      <span elem="tag">#Дети</span>
-                      <span elem="tag">#Образование</span>
-                    </span>
-                    <span elem="date">
-                      <span>23 ИЮЛЯ</span>
-                      <i></i>
-                      <span>18:43</span>
-                    </span>
-                  </span>
+                <span elem="date">
+                  <span>23 ИЮЛЯ</span>
+                  <i></i>
+                  <span>18:43</span>
                 </span>
-              </a><!-- article-thumb -->
-            </div>
-            <div elem="item">
-              <a block="article-thumb" mods="no-img" href="#">
-                <span elem="body">
-                  <!-- <span elem="img">
-                                <img src="img/article-thumb-img5.jpg" alt="">
-                              </span> -->
-                  <span elem="content">
-                    <span elem="name">
-                      Как локация школы или вуза может повлиять
-                      на развитие и учебу
-                    </span>
-                    <span elem="tags">
-                      <span elem="tag">#Дети</span>
-                      <span elem="tag">#Образование</span>
-                    </span>
-                    <span elem="date">
-                      <span>23 ИЮЛЯ</span>
-                      <i></i>
-                      <span>18:43</span>
-                    </span>
-                  </span>
+              </span>
+            </span>
+          </a><!-- article-thumb -->
+        </div>
+        <div elem="item" class="grid-item">
+          <a block="article-thumb" href="#">
+            <span elem="body">
+              <span elem="img">
+                <img src="img/article-thumb-img16.jpg" alt="">
+              </span>
+              <span elem="content">
+                <span elem="name">
+                  Дети-вундеркинды: <br>
+                  хорошо это или <br>
+                  плохо?
                 </span>
-              </a><!-- article-thumb -->
-            </div>
-          </div>
+                <span elem="tags">
+                  <span elem="tag">#Дети</span>
+                  <span elem="tag">#Образование</span>
+                </span>
+                <span elem="date">
+                  <span>23 ИЮЛЯ</span>
+                  <i></i>
+                  <span>18:43</span>
+                </span>
+              </span>
+            </span>
+          </a><!-- article-thumb -->
+        </div>
+        <div elem="item" class="grid-item">
+          <a block="article-thumb" href="#">
+            <span elem="body">
+              <span elem="img">
+                <img src="img/article-thumb-img17.jpg" alt="">
+              </span>
+              <span elem="content">
+                <span elem="name">
+                  Российские школы смогут пользоваться аналогами программ Microsoft
+                </span>
+                <span elem="tags">
+                  <span elem="tag">#Дети</span>
+                  <span elem="tag">#Образование</span>
+                </span>
+                <span elem="date">
+                  <span>23 ИЮЛЯ</span>
+                  <i></i>
+                  <span>18:43</span>
+                </span>
+              </span>
+            </span>
+          </a><!-- article-thumb -->
+        </div>
+        <div elem="item" class="grid-item">
+          <a block="article-thumb" href="#">
+            <span elem="body">
+              <span elem="img">
+                <img src="img/article-thumb-img18.jpg" alt="">
+              </span>
+              <span elem="content">
+                <span elem="icon">
+                  <img src="img/article-thumb-icon.png" alt="">
+                </span>
+                <span elem="name">
+                  Болонская система образования, и к чему приведет отказ от нее?
+                </span>
+                <span elem="tags">
+                  <span elem="tag">#Дети</span>
+                  <span elem="tag">#Образование</span>
+                </span>
+                <span elem="date">
+                  <span>23 ИЮЛЯ</span>
+                  <i></i>
+                  <span>18:43</span>
+                </span>
+              </span>
+            </span>
+          </a><!-- article-thumb -->
+        </div>
+        <div elem="item" class="grid-item">
+          <a block="article-thumb" href="#">
+            <span elem="body">
+              <span elem="img">
+                <img src="img/article-thumb-img19.jpg" alt="">
+              </span>
+              <span elem="content">
+                <span elem="icon">
+                  <img src="img/article-thumb-icon.png" alt="">
+                </span>
+                <span elem="name">
+                  Десятилетие науки <br>
+                  и технологий: взгляд <br>
+                  из «Сириуса»
+                </span>
+                <span elem="tags">
+                  <span elem="tag">#Дети</span>
+                  <span elem="tag">#Образование</span>
+                </span>
+                <span elem="date">
+                  <span>23 ИЮЛЯ</span>
+                  <i></i>
+                  <span>18:43</span>
+                </span>
+              </span>
+            </span>
+          </a><!-- article-thumb -->
+        </div>
+        <div elem="item" class="grid-item">
+          <a block="article-thumb" href="#">
+            <span elem="body">
+              <span elem="img">
+                <img src="img/article-thumb-img20.jpg" alt="">
+              </span>
+              <span elem="content">
+                <span elem="name">
+                  Ученые открыли, как гены отца и матери влияют на поведение детей
+                </span>
+                <span elem="tags">
+                  <span elem="tag">#Дети</span>
+                  <span elem="tag">#Образование</span>
+                </span>
+                <span elem="date">
+                  <span>23 ИЮЛЯ</span>
+                  <i></i>
+                  <span>18:43</span>
+                </span>
+              </span>
+            </span>
+          </a><!-- article-thumb -->
+        </div>
+        <div elem="item" class="grid-item">
+          <a block="article-thumb" mods="no-img" href="#">
+            <span elem="body">
+              <!-- <span elem="img">
+                                        <img src="img/article-thumb-img5.jpg" alt="">
+                                      </span> -->
+              <span elem="content">
+                <span elem="name">
+                  Как заинтересовать <br>
+                  детей наукой? <br>
+                  СОВЕТЫ ПСИХОЛОГОВ
+                </span>
+                <span elem="tags">
+                  <span elem="tag">#Дети</span>
+                  <span elem="tag">#Образование</span>
+                </span>
+                <span elem="date">
+                  <span>23 ИЮЛЯ</span>
+                  <i></i>
+                  <span>18:43</span>
+                </span>
+              </span>
+            </span>
+          </a><!-- article-thumb -->
+        </div>
+        <div elem="item" class="grid-item">
+          <a block="article-thumb" mods="no-img" href="#">
+            <span elem="body">
+              <!-- <span elem="img">
+                                        <img src="img/article-thumb-img5.jpg" alt="">
+                                      </span> -->
+              <span elem="content">
+                <span elem="name">
+                  Как локация школы или вуза может повлиять
+                  на развитие и учебу
+                </span>
+                <span elem="tags">
+                  <span elem="tag">#Дети</span>
+                  <span elem="tag">#Образование</span>
+                </span>
+                <span elem="date">
+                  <span>23 ИЮЛЯ</span>
+                  <i></i>
+                  <span>18:43</span>
+                </span>
+              </span>
+            </span>
+          </a><!-- article-thumb -->
         </div>
       </div>
       <div elem="bottom">
