--- a/marmelad/_blocks/other-articles/other-articles.html
+++ b/marmelad/_blocks/other-articles/other-articles.html
@@ -7,163 +7,151 @@
       <h2 elem="title" class="animate-title">Это интересно</h2> 
     </div>
     <div elem="inner" class="contain">
-      <div elem="cols">
-        <div elem="col">
-          <div elem="items">
-            <div elem="item">
-              <a block="article-thumb" href="#">
-                <span elem="body">
-                  <span elem="img">
-                    <img src="img/article-thumb-img7.jpg" alt="">
-                  </span>
-                  <span elem="content">
-                    <span elem="name">
-                      2022-2031 годы объявлены <br>
-                      в России Десятилетием науки и технологий
-                    </span>
-                    <span elem="tags">
-                      <span elem="tag">#Дети</span>
-                      <span elem="tag">#Образование</span>
-                    </span>
-                    <span elem="date">
-                      <span>23 ИЮЛЯ</span>
-                      <i></i>
-                      <span>18:43</span>
-                    </span>
-                  </span>
+      <div elem="items" class="js-other-articles-grid">
+        <div elem="item" class="grid-item">
+          <a block="article-thumb" href="#">
+            <span elem="body">
+              <span elem="img">
+                <img src="img/article-thumb-img7.jpg" alt="">
+              </span>
+              <span elem="content">
+                <span elem="name">
+                  2022-2031 годы объявлены <br>
+                  в России Десятилетием науки и технологий
                 </span>
-              </a><!-- article-thumb -->
-            </div>
-            <div elem="item">
-              <a block="article-thumb" href="#">
-                <span elem="body">
-                  <span elem="img">
-                    <img src="img/article-thumb-img8.jpg" alt="">
-                  </span>
-                  <span elem="content">
-                    <span elem="icon">
-                      <img src="img/article-thumb-icon.png" alt="">
-                    </span>
-                    <span elem="name">
-                      Болонская система образования, и к чему приведет отказ от нее?
-                    </span>
-                    <span elem="tags">
-                      <span elem="tag">#Дети</span>
-                      <span elem="tag">#Образование</span>
-                    </span>
-                    <span elem="date">
-                      <span>23 ИЮЛЯ</span>
-                      <i></i>
-                      <span>18:43</span>
-                    </span>
-                  </span>
+                <span elem="tags">
+                  <span elem="tag">#Дети</span>
+                  <span elem="tag">#Образование</span>
                 </span>
-              </a><!-- article-thumb -->
-            </div>
-          </div>
+                <span elem="date">
+                  <span>23 ИЮЛЯ</span>
+                  <i></i>
+                  <span>18:43</span>
+                </span>
+              </span>
+            </span>
+          </a><!-- article-thumb -->
         </div>
-        <div elem="col">
-          <div elem="items">
-            <div elem="item">
-              <a block="article-thumb" href="#">
-                <span elem="body">
-                  <span elem="img">
-                    <img src="img/article-thumb-img9.jpg" alt="">
-                  </span>
-                  <span elem="content">
-                    <span elem="name">
-                      какие профессии будут востребованы в России в ближайшее десятилетие
-                    </span>
-                    <span elem="tags">
-                      <span elem="tag">#Дети</span>
-                      <span elem="tag">#Образование</span>
-                    </span>
-                    <span elem="date">
-                      <span>23 ИЮЛЯ</span>
-                      <i></i>
-                      <span>18:43</span>
-                    </span>
-                  </span>
+        <div elem="item" class="grid-item">
+          <a block="article-thumb" href="#">
+            <span elem="body">
+              <span elem="img">
+                <img src="img/article-thumb-img8.jpg" alt="">
+              </span>
+              <span elem="content">
+                <span elem="icon">
+                  <img src="img/article-thumb-icon.png" alt="">
                 </span>
-              </a><!-- article-thumb -->
-            </div>
-            <div elem="item">
-              <a block="article-thumb" href="#">
-                <span elem="body">
-                  <span elem="img">
-                    <img src="img/article-thumb-img10.jpg" alt="">
-                  </span>
-                  <span elem="content">
-                    <span elem="name">
-                      10 трендов будущего образования: как и чему будут учиться наши дети
-                    </span>
-                    <span elem="tags">
-                      <span elem="tag">#Дети</span>
-                      <span elem="tag">#Образование</span>
-                    </span>
-                    <span elem="date">
-                      <span>23 ИЮЛЯ</span>
-                      <i></i>
-                      <span>18:43</span>
-                    </span>
-                  </span>
+                <span elem="name">
+                  Болонская система образования, и к чему приведет отказ от нее?
                 </span>
-              </a><!-- article-thumb -->
-            </div>
-          </div>
+                <span elem="tags">
+                  <span elem="tag">#Дети</span>
+                  <span elem="tag">#Образование</span>
+                </span>
+                <span elem="date">
+                  <span>23 ИЮЛЯ</span>
+                  <i></i>
+                  <span>18:43</span>
+                </span>
+              </span>
+            </span>
+          </a><!-- article-thumb -->
         </div>
-        <div elem="col">
-          <div elem="items">
-            <div elem="item">
-              <a block="article-thumb" href="#">
-                <span elem="body">
-                  <span elem="img">
-                    <img src="img/article-thumb-img11.jpg" alt="">
-                  </span>
-                  <span elem="content">
-                    <span elem="icon">
-                      <img src="img/article-thumb-icon.png" alt="">
-                    </span>
-                    <span elem="name">
-                      оптимальное время использования гаджетов для детей
-                    </span>
-                    <span elem="tags">
-                      <span elem="tag">#Дети</span>
-                      <span elem="tag">#Образование</span>
-                    </span>
-                    <span elem="date">
-                      <span>23 ИЮЛЯ</span>
-                      <i></i>
-                      <span>18:43</span>
-                    </span>
-                  </span>
+        <div elem="item" class="grid-item">
+          <a block="article-thumb" href="#">
+            <span elem="body">
+              <span elem="img">
+                <img src="img/article-thumb-img9.jpg" alt="">
+              </span>
+              <span elem="content">
+                <span elem="name">
+                  какие профессии будут востребованы в России в ближайшее десятилетие
                 </span>
-              </a><!-- article-thumb -->
-            </div>
-            <div elem="item">
-              <a block="article-thumb" href="#">
-                <span elem="body">
-                  <span elem="img">
-                    <img src="img/article-thumb-img12.jpg" alt="">
-                  </span>
-                  <span elem="content">
-                    <span elem="name">
-                      Определить расу по рентгеновским снимкам может ИИ
-                    </span>
-                    <span elem="tags">
-                      <span elem="tag">#Дети</span>
-                      <span elem="tag">#Образование</span>
-                    </span>
-                    <span elem="date">
-                      <span>23 ИЮЛЯ</span>
-                      <i></i>
-                      <span>18:43</span>
-                    </span>
-                  </span>
+                <span elem="tags">
+                  <span elem="tag">#Дети</span>
+                  <span elem="tag">#Образование</span>
                 </span>
-              </a><!-- article-thumb -->
-            </div>
-          </div>
+                <span elem="date">
+                  <span>23 ИЮЛЯ</span>
+                  <i></i>
+                  <span>18:43</span>
+                </span>
+              </span>
+            </span>
+          </a><!-- article-thumb -->
+        </div>
+        <div elem="item" class="grid-item">
+          <a block="article-thumb" href="#">
+            <span elem="body">
+              <span elem="img">
+                <img src="img/article-thumb-img10.jpg" alt="">
+              </span>
+              <span elem="content">
+                <span elem="name">
+                  10 трендов будущего образования: как и чему будут учиться наши дети
+                </span>
+                <span elem="tags">
+                  <span elem="tag">#Дети</span>
+                  <span elem="tag">#Образование</span>
+                </span>
+                <span elem="date">
+                  <span>23 ИЮЛЯ</span>
+                  <i></i>
+                  <span>18:43</span>
+                </span>
+              </span>
+            </span>
+          </a><!-- article-thumb -->
+        </div>
+        <div elem="item" class="grid-item">
+          <a block="article-thumb" href="#">
+            <span elem="body">
+              <span elem="img">
+                <img src="img/article-thumb-img11.jpg" alt="">
+              </span>
+              <span elem="content">
+                <span elem="icon">
+                  <img src="img/article-thumb-icon.png" alt="">
+                </span>
+                <span elem="name">
+                  оптимальное время использования гаджетов для детей
+                </span>
+                <span elem="tags">
+                  <span elem="tag">#Дети</span>
+                  <span elem="tag">#Образование</span>
+                </span>
+                <span elem="date">
+                  <span>23 ИЮЛЯ</span>
+                  <i></i>
+                  <span>18:43</span>
+                </span>
+              </span>
+            </span>
+          </a><!-- article-thumb -->
+        </div>
+        <div elem="item" class="grid-item">
+          <a block="article-thumb" href="#">
+            <span elem="body">
+              <span elem="img">
+                <img src="img/article-thumb-img12.jpg" alt="">
+              </span>
+              <span elem="content">
+                <span elem="name">
+                  Определить расу по рентгеновским снимкам может ИИ
+                </span>
+                <span elem="tags">
+                  <span elem="tag">#Дети</span>
+                  <span elem="tag">#Образование</span>
+                </span>
+                <span elem="date">
+                  <span>23 ИЮЛЯ</span>
+                  <i></i>
+                  <span>18:43</span>
+                </span>
+              </span>
+            </span>
+          </a><!-- article-thumb -->
         </div>
       </div>
     </div>
