--- a/marmelad/_blocks/other-articles/other-articles.html
+++ b/marmelad/_blocks/other-articles/other-articles.html
@@ -12,7 +12,7 @@
           <a block="article-thumb" href="#">
             <span elem="body">
               <span elem="img">
-                <img src="img/article-thumb-img7.jpg" alt="">
+                <img src="img/article-thumb-img7.jpg" width="280" height="280" alt="">
               </span>
               <span elem="content">
                 <span elem="name">
@@ -36,7 +36,7 @@
           <a block="article-thumb" href="#">
             <span elem="body">
               <span elem="img">
-                <img src="img/article-thumb-img8.jpg" alt="">
+                <img src="img/article-thumb-img8.jpg" width="280" height="280" alt="">
               </span>
               <span elem="content">
                 <span elem="icon">
@@ -62,7 +62,7 @@
           <a block="article-thumb" href="#">
             <span elem="body">
               <span elem="img">
-                <img src="img/article-thumb-img9.jpg" alt="">
+                <img src="img/article-thumb-img9.jpg" width="280" height="280" alt="">
               </span>
               <span elem="content">
                 <span elem="name">
@@ -85,7 +85,7 @@
           <a block="article-thumb" href="#">
             <span elem="body">
               <span elem="img">
-                <img src="img/article-thumb-img10.jpg" alt="">
+                <img src="img/article-thumb-img10.jpg" width="280" height="164" alt="">
               </span>
               <span elem="content">
                 <span elem="name">
@@ -108,7 +108,7 @@
           <a block="article-thumb" href="#">
             <span elem="body">
               <span elem="img">
-                <img src="img/article-thumb-img11.jpg" alt="">
+                <img src="img/article-thumb-img11.jpg" width="280" height="280" alt="">
               </span>
               <span elem="content">
                 <span elem="icon">
@@ -134,7 +134,7 @@
           <a block="article-thumb" href="#">
             <span elem="body">
               <span elem="img">
-                <img src="img/article-thumb-img12.jpg" alt="">
+                <img src="img/article-thumb-img12.jpg" width="280" height="164" alt="">
               </span>
               <span elem="content">
                 <span elem="name">
