--- a/marmelad/_blocks/all-articles/all-articles.html
+++ b/marmelad/_blocks/all-articles/all-articles.html
@@ -6,7 +6,7 @@
           <a block="article-thumb" href="#">
             <span elem="body">
               <span elem="img">
-                <img src="img/article-thumb-img13.jpg" alt="">
+                <img src="img/article-thumb-img13.jpg" width="280" height="280" alt="">
               </span>
               <span elem="content">
                 <span elem="name">
@@ -29,7 +29,7 @@
           <a block="article-thumb" href="#">
             <span elem="body">
               <span elem="img">
-                <img src="img/article-thumb-img14.jpg" alt="">
+                <img src="img/article-thumb-img14.jpg" width="280" height="270" alt="">
               </span>
               <span elem="content">
                 <span elem="icon">
@@ -55,7 +55,7 @@
           <a block="article-thumb" href="#">
             <span elem="body">
               <span elem="img">
-                <img src="img/article-thumb-img15.jpg" alt="">
+                <img src="img/article-thumb-img15.jpg" width="280" height="164" alt="">
               </span>
               <span elem="content">
                 <span elem="name">
@@ -79,7 +79,7 @@
           <a block="article-thumb" href="#">
             <span elem="body">
               <span elem="img">
-                <img src="img/article-thumb-img16.jpg" alt="">
+                <img src="img/article-thumb-img16.jpg" width="280" height="280" alt="">
               </span>
               <span elem="content">
                 <span elem="name">
@@ -104,7 +104,7 @@
           <a block="article-thumb" href="#">
             <span elem="body">
               <span elem="img">
-                <img src="img/article-thumb-img17.jpg" alt="">
+                <img src="img/article-thumb-img17.jpg" width="280" height="164" alt="">
               </span>
               <span elem="content">
                 <span elem="name">
@@ -127,7 +127,7 @@
           <a block="article-thumb" href="#">
             <span elem="body">
               <span elem="img">
-                <img src="img/article-thumb-img18.jpg" alt="">
+                <img src="img/article-thumb-img18.jpg" width="280" height="280" alt="">
               </span>
               <span elem="content">
                 <span elem="icon">
@@ -153,7 +153,7 @@
           <a block="article-thumb" href="#">
             <span elem="body">
               <span elem="img">
-                <img src="img/article-thumb-img19.jpg" alt="">
+                <img src="img/article-thumb-img19.jpg" width="280" height="280" alt="">
               </span>
               <span elem="content">
                 <span elem="icon">
@@ -181,7 +181,7 @@
           <a block="article-thumb" href="#">
             <span elem="body">
               <span elem="img">
-                <img src="img/article-thumb-img20.jpg" alt="">
+                <img src="img/article-thumb-img20.jpg" width="280" height="164" alt="">
               </span>
               <span elem="content">
                 <span elem="name">
