--- a/marmelad/_pages/podcasts-detailed-page.html
+++ b/marmelad/_pages/podcasts-detailed-page.html
@@ -20,7 +20,11 @@ layout: !!map
         <div elem="left">
           <div block="podcast-simple">
             <div elem="body">
-              <a elem="img" href="#"><img src="img/article-thumb-img7.jpg" alt=""></a>
+              <a elem="img-wrap" href="#">
+                <span elem="img">
+                  <img src="img/article-thumb-img7.jpg" alt="">
+                </span>
+              </a>
               <a elem="name" href="#">Название подкаста</a>
               <span elem="count-edition">18 выпусков</span>
               <div elem="text">
