added audio player

--- a/marmelad/_pages/podcasts-detailed-page.html
+++ b/marmelad/_pages/podcasts-detailed-page.html
@@ -36,7 +36,12 @@ layout: !!map
         </div>
         <div elem="right">
           <div elem="inner-top">
-            <div elem="podcast-icon"><img src="img/play-icon.svg" alt=""></div>
+            <!-- <div elem="podcast-icon"><img src="img/play-icon.svg" alt=""></div> -->
+            <div elem="audio-player">
+              <audio id="audio_player">
+                <source src="https://cdn.plyr.io/static/demo/Kishi_Bashi_-_It_All_Began_With_a_Burst.mp3">
+              </audio>
+            </div>
             <div elem="head-podcast">
               <div elem="date">
                 <span>23 ИЮЛЯ</span>
@@ -50,7 +55,9 @@ layout: !!map
               </h1>
               <span elem="count-edition">3 выпуск</span>
             </div>
+            
           </div>
+          
           <div block="article-content">
             <div elem="section">
               <div elem="inner">
