fix slider & more

--- a/marmelad/_blocks/articles-day/articles-day.html
+++ b/marmelad/_blocks/articles-day/articles-day.html
@@ -308,7 +308,7 @@
               </a><!-- article-thumb -->
             </div>
             <div elem="item">
-              <a block="article-thumb" href="#">
+              <a block="article-thumb" mods="video" href="#">
                 <span elem="body">
                   <span elem="img">
                     <img width="280" height="164" src="img/article-thumb-img5.jpg" alt="">
@@ -377,7 +377,7 @@
               </a><!-- article-thumb -->
             </div>
             <div elem="item">
-              <a block="article-thumb" mods="video" href="#">
+              <a block="article-thumb" mods="podcast" href="#">
                 <span elem="body">
                   <span elem="img">
                     <img width="144" height="144" src="img/article-thumb-poster.png" alt="">
@@ -405,7 +405,7 @@
               </a><!-- article-thumb -->
             </div>
             <div elem="item">
-              <a block="article-thumb" mods="video" href="#">
+              <a block="article-thumb" mods="podcast" href="#">
                 <span elem="body">
                   <span elem="img">
                     <img width="144" height="144" src="img/article-thumb-poster.png" alt="">
@@ -433,7 +433,7 @@
               </a><!-- article-thumb -->
             </div>
             <div elem="item">
-              <a block="article-thumb" mods="video" href="#">
+              <a block="article-thumb" mods="podcast" href="#">
                 <span elem="body">
                   <span elem="img">
                     <img width="144" height="144" src="img/article-thumb-poster.png" alt="">
