--- a/marmelad/_blocks/other-articles/other-articles.html
+++ b/marmelad/_blocks/other-articles/other-articles.html
@@ -1,7 +1,7 @@
 <div block="other-articles">
   <div elem="section">
     <div elem="banner-title">
-      <img src="img/title-pic.jpg" alt="">
+      <img src="img/title-pic.jpg" width="100%" height="250" alt="">
     </div>
     <div elem="head">
       <h2 elem="title" class="animate-title">Это интересно</h2> 
