more fix, fix cache scroll, fix scroll card slider

--- a/marmelad/_blocks/article-content/article-content.html
+++ b/marmelad/_blocks/article-content/article-content.html
@@ -30,13 +30,13 @@
           </div>
         </div>
       </div>
+      <h2 elem="lid">
+        Откуда появилась идея метавселенной, кто станет пионером в создании альтернативной реальности, и сможет ли матрица
+        заменить смартфоны или Интернет
+      </h2>
       <div elem="wrapper">
         <div elem="container">
           <div elem="content">
-            <h2>
-              Откуда появилась идея метавселенной, кто станет пионером в создании альтернативной реальности, и сможет ли матрица
-              заменить смартфоны или Интернет
-            </h2>
             <h3>
               Что такое метавселенная
             </h3>
