--- a/marmelad/_blocks/editorial/editorial.html
+++ b/marmelad/_blocks/editorial/editorial.html
@@ -16,7 +16,7 @@
             </div>
           </div>
         </div>
-        <div elem="item">
+        <a elem="item" href="#">
           <div elem="body">
             <div elem="img">
               <img src="img/article-thumb-img2.jpg" alt="">
@@ -24,9 +24,11 @@
             <div elem="content">
               <div elem="name">Екатерина Огородник</div>
               <div elem="position">Главный редактор</div>
+              <div elem="email">team@sirius-journal.ru</div>
+              <div elem="phone">+ 7 911 400 0000</div>
             </div>
           </div>
-        </div>
+        </a>
         <div elem="item">
           <div elem="body">
             <div elem="img">
